refactor: ci 수정 및 test 코드 분리